# generic_chatbot

./: Cargo.toml  msgq.ron
src/: main.rs
