[package]
name = "generic_chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
itertools = "0.12.1"
kalosm = { git = "https://github.com/floneum/floneum", version = "0.1.0" }
tokio = "1.34.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 3
